@@ -1,6 +1,10 @@
 <h1 id='change-logs'>Change Logs</h1><h2 id='2022'>2022</h2><h3 id='2022-02-06'>2022-02-06</h3>
-<p>Update Upbit OPEN API Version 1.3.1
-- <a href="https://docs.upbit.com/changelog/open-api-%EB%B3%80%EA%B2%BD%EC%82%AC%ED%95%AD-%EC%95%88%EB%82%B4">Upbit OPEN API 변경사항 안내</a>를 참고하세요.</p>
+<p>Upbit Client Released: v1.3.1.0</p>
+
+<ul>
+<li>Update Upbit OPEN API Version 1.3.1</li>
+<li><a href="https://docs.upbit.com/changelog/open-api-%EB%B3%80%EA%B2%BD%EC%82%AC%ED%95%AD-%EC%95%88%EB%82%B4">Upbit OPEN API 변경사항 안내</a>를 참고하세요.</li>
+</ul>
 <h3 id='2022-01-14'>2022-01-14</h3>
 <p>Upbit Client Released: v1.2.2.4</p>
 
